syntax="proto3";

package intr.v1;
option go_package="intr/v1;intrv1";

service InteractiveService  {
  rpc IncrReadCnt(IncrReadCntRequest) returns (IncrReadCntResponse);
  rpc GetByIds(GetByIdsRequest) returns (GetByIdsResponse);
}

message IncrReadCntRequest{
  string biz =1;
  int64 biz_id=2;
}
message IncrReadCntResponse{

}

message Interactive{
  string biz=1;
  int64 biz_id=2;
  int64 read_cnt=3;
}

message GetByIdsRequest{
  string biz =1;
  repeated int64 biz_id=2;
}
message GetByIdsResponse{
  map<int64,Interactive> intrs=1;
}